# uni-SpaceInvader

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
examples/colorkey/: main.cpp
examples/huffman/: CMakeLists.txt  Makefile  main.cpp
examples/ppm/: main.cpp  sample_fg.ppm
examples/quadtree/: CMakeLists.txt  Makefile  main.cpp  quadtree.hpp  quadtree_impl.hpp
examples/rle/: main.cpp
examples/sat/: CMakeLists.txt  Makefile  main.cpp
examples/shooter0/: CMakeLists.txt  asteroid.cpp  asteroid.hpp  bullet.cpp  bullet.hpp  collision_manager.cpp  collision_manager.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp  scrolling_bg.hpp  spawn_point.hpp
examples/shooter0/img/: asteroid.rle  missile.rle  ship_left.rle
examples/shooter1/: CMakeLists.txt  Makefile  asteroid.cpp  asteroid.hpp  bullet.cpp  bullet.hpp  collision_manager.cpp  collision_manager.hpp  game.cpp  game.hpp  game_object_visitor.cpp  game_object_visitor.hpp  main.cpp  player.cpp  player.hpp  scrolling_bg.hpp  spawn_point.hpp  stats.hpp
examples/shooter1/img/: ship.rle  ship_right.rle
examples/snake/: main.cpp
sgfx/: CMakeLists.txt
sgfx/include/sgfx/: canvas.hpp  color.hpp  image.hpp  io_helper.hpp  key.hpp  primitive_types.hpp  primitives.hpp  window.hpp
sgfx/src/: canvas.cpp  image.cpp  primitives.cpp  window.cpp
